Add option to edit court numbers.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li>Balance and distribute sit-outs.</li>
                     <li>Minimise playing against the same players.</li>
                     <li>Higlight players with multiple sit-outs.</li>
-                    <li>Optionally add the player's names.</li>
+                    <li>Add the player's names and edit court numbers.</li>
                 </ul>
             </div>
         </div>
