added version number to ui

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="child-grid">
-                <h3>Features</h3>
+                <h3>Features (v3.0)</h3>
                 <ul>
                     <li>Avoid pairing the same players or opponents.</li>
                     <li>Balance and distribute sit-outs.</li>
